--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Sunbird</title>
+    <link rel="stylesheet"
+          href="https://bootswatch.com/4/darkly/bootstrap.min.css">
+    <title>Songbird</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
